# niri-workspace-column-indicator

./: Cargo.toml  README.md
extra/: niri-workspace-column-indicator.sh
src/: main.rs
